# katas

CodeKata/: pyproject.toml
CodeKata/2_karate_chop/: base_test_case.py  iterative.py  recursive.py  sub_list.py  test_iterative.py  test_recursive.py  test_sub_list.py
CodeKata/3_data_munging/: max_spread.py  min_goal_difference.py
CodeKata/5_bloom_filters/: bloom_filter.py
CodeKata/6_anagrams/: anagrams.py  output  test_anagrams.py
codility/: pyproject.toml
codility/lessons/06/numberofdiscintersections/: solution.py  solution_test.py
codility/lessons/07/stonewall/: solution.py  solution_test.py
