[tool.poetry]
name = "codekata"
version = "0.1.0"
description = ""
authors = ["David <djphamill@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
parameterized = "^0.9.0"
pytest = "^8.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
